--- a/style/style_hw-03-03.css
+++ b/style/style_hw-03-03.css
@@ -5,18 +5,33 @@ body{
     height: 100%;
     background-image: url("../image/Rectangle\ 1.png");
     background-size: cover;
+    margin-top: 0;
     margin-left: 40px;
-    margin-right: 0;     
+    margin-right: 0;
+    margin-bottom: 0;       
 }
 
 header{
     display: flex;
-    margin: 0 auto;
+    align-items: center;
 }
 
-img{
-    padding-top: 70px;
-    
+.header-left{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.header-right{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.logo{
+    width: 156px;
+    height: 48px;
+    margin-top: 70px;    
 }
 
 .date{
@@ -31,17 +46,61 @@ padding-left: 56px;
 }
 
 h2{
-    padding-top: 60px;
-    padding-left: 1045px;;
-    padding-right: 155px;
+    margin-top: 60px;
+    margin-left: 1590px;
     color: white;
     font-size: 35px;
+}
+
+.avatar{
+    height: 74px;
+    margin-top: 42px;
+    margin-right: 33px;
+    margin-left: 60px;
+
 }
 
 .description{
     text-align: left;
     color: white;
     font-size: 28px;
+}
+
+h3{
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 39px;
+    letter-spacing: 0%;
+}
+
+h1{
+    font-family: Inter;
+    font-size: 64px;
+    font-weight: 800;
+    line-height: 77px;
+    letter-spacing: 5.5%;
+    margin-left 0;
+}
+
+h4{
+    font-family: Inter;
+    font-size: 29px;
+    font-weight: 400;
+    line-height: 0px;
+    letter-spacing: 0%;
+}
+
+p{
+    /* In 1980s Indiana, a group of young friends witness supernatural forces and secret government exploits. As they search for answers, the children unravel a series of extraordinary mysteries. */
+    width: 864px;
+    height: 130px;
+    color: rgb(167, 166, 166);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0%;    
 }
 
 .star{
