--- a/style/style_hw-03-03.css
+++ b/style/style_hw-03-03.css
@@ -1,164 +1,229 @@
-*{box-sizing: border-box;}
+*{
+    box-sizing: border-box;
+}
 
 body{
     width: 100%;
     height: 100%;
     background-image: url("../image/Rectangle\ 1.png");
     background-size: cover;
-    margin-top: 0;
-    margin-left: 40px;
-    margin-right: 0;
-    margin-bottom: 0;       
-}
+    background-position: top center;    
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
 
 header{
     display: flex;
-    align-items: center;
-}
-
-.header-left{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.header-right{
-    display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    padding: 42px 33px 125px 40px;
     align-items: center;
 }
 
 .logo{
-    width: 156px;
     height: 48px;
-    margin-top: 70px;    
+    width: 156px;    
 }
 
-.date{
-color: rgb(200, 200, 200);
-font-family: Kyiv*Type Titling;
-font-size: 24px;
-font-weight: 500;
-line-height: 29px;
-letter-spacing: 0%;
-padding-top: 77px;
-padding-left: 56px;
+.date {
+    color: rgb(200, 200, 200);
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+    letter-spacing: 0%;
+    padding-left: 82px;
+    position: relative;
+    top: -15px;
 }
 
-h2{
-    margin-top: 60px;
-    margin-left: 1590px;
+.date::before{
+    content: "";
+    display: inline-block;
+    width: 3px;
+    height: 20px;
+    left: -26px;
+    top: 3px;
+    background-color: white;
+}
+
+.search{
     color: white;
     font-size: 35px;
+    background: transparent;
+    border: none;
+    padding-right: 48px; 
+    position: relative;
+    top: -21px;   
 }
 
 .avatar{
-    height: 74px;
-    margin-top: 42px;
-    margin-right: 33px;
-    margin-left: 60px;
-
+    border-radius: 100%;
+    background: transparent;
+    font-weight: 74px;
 }
 
-.description{
-    text-align: left;
-    color: white;
-    font-size: 28px;
-}
+main{
+    padding-left: 40px;
+    padding-bottom: 49px;
+    width: 990px;
+    }
 
-h3{
-    font-family: Inter;
+.genre{
     font-size: 32px;
     font-weight: 500;
     line-height: 39px;
-    letter-spacing: 0%;
+    letter-spacing: 0;
+    color: rgb(255, 255, 255);
+    display: flex;
+    column-gap: 42px;
+}
+
+ .genre span{
+    display: inline-block;
+    position: relative;
+    
+}
+
+.genre span::before{
+    content: "";
+    display: inline-block;
+    width: 3px;
+    height: 33px;
+    position: absolute;
+    left: -20px;
+    top: 3px;
+    background-color: white;
+}
+
+.genre span:first-child::before{
+    display: none;
 }
 
 h1{
-    font-family: Inter;
     font-size: 64px;
     font-weight: 800;
     line-height: 77px;
     letter-spacing: 5.5%;
-    margin-left 0;
+    color: rgb(255, 255, 255);
+    margin-top: 27px;
+    margin-bottom: 35px;
 }
 
-h4{
-    font-family: Inter;
-    font-size: 29px;
-    font-weight: 400;
+.info-film{
+    font-size: 30px;
     line-height: 0px;
+    font-weight: 500;
     letter-spacing: 0%;
+    color: rgb(255, 255, 255);    
+    gap: 46px;
+    margin-bottom: 47px;
+    display: flex;    
+}
+.info-film span{
+    font-size: 29px;
+    line-height: 0px;
+    font-weight: 400;
+    letter-spacing: 0%;
+    color: rgb(167, 166, 166);       
 }
 
-p{
+.sub-text{
+    position: relative;
+    
+}
+.sub-text::before{
+    content: "";
+    width: 3px;
+    height: 20px;
+    left: -20px;
+    top: -6px;
+    background-color: white;
+    position: absolute;
+}
+.sub-text:first-child::before{
+    display: none;
+}
+    
+
+.description{
     /* In 1980s Indiana, a group of young friends witness supernatural forces and secret government exploits. As they search for answers, the children unravel a series of extraordinary mysteries. */
-    width: 864px;
-    height: 130px;
+    width: 820px;
+    /*height: 130px;*/
     color: rgb(167, 166, 166);
-    font-family: Inter;
     font-size: 24px;
-    font-weight: 400;
     line-height: 29px;
-    letter-spacing: 0%;    
+    letter-spacing: 0%;
+    display: flex;
+    margin-bottom: 45px;    
 }
 
 .star{
-    width: 212px;
-    height: 32px;
-    text-align: center;
     background-color: transparent;    
     color: #f4f40a;
     font-size: 28px;
     display: inline;
 }
+    
 .empty-star{
+    background-color: transparent;
     color:white;
     font-size: 28px;
-    display: inline;
+    display: inline;      
+}
+
+.button-block{
+    margin-top: 53px;
+    margin-bottom: 54px;
+    display: flex;
 }
 
 .stream{
     width: 272px;
     height: 64px;
-    left: 40px;
-    top: 682px;
     border-radius: 10px;
+    border: none;
     background: rgb(213, 13, 31);
     color: rgb(255, 255, 255);
-    font-family: Inter;
     font-size: 22px;
     font-weight: 500;
     line-height: 141.52%;
     letter-spacing: 0%;
-    margin-top: 682px;
-
 }
-
 .episodes{
-width: 271px;
-height: 64px;
-margin-left: 90px;
-margin-top: 682px;
-background: transparent;
-box-sizing: border-box;
-border: 3px solid rgb(255, 255, 255);
-border-radius: 10px;
-color: rgb(255, 255, 255);
-font-size: 22px;
-font-weight: 500;
-line-height: 141.52%;
-letter-spacing: 0%;
+    width: 272px;
+    height: 64px;
+    margin-left: 90px;
+    background: transparent;
+    box-sizing: border-box;
+    border: 3px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 141.52%;
+    letter-spacing: 0%;
 }
 
 .popular{
-    display: flex; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    margin-bottom: 32px;
 }
 
 h5{
     text-align: left;
     color: white;
-    font-size: 28px;
+    font-size: 22px;  
+    font-weight: 800;
+    line-height: 144.52%;
+    letter-spacing: 13.5%;
+}
+
+.controls{
+    display: flex;
+    gap: 27px;
 }
 
 .left, .right{
@@ -171,39 +236,38 @@ h5{
     border: 2px solid white;
     border-radius: 50px;
     border-radius: 100%;
-    margin-left: 520px;
-}
+   }
 .left:hover, .right:hover{
-    width: 41px;
-    height: 41px;
+    width: 45px;
+    height: 45px;
     text-align: center;
-    color: rgb(153, 148, 148)e;
+    color: rgb(167, 166, 166);
     font-size: 20px;
     background-color: transparent;
-    border: 2px solid rgb(153, 148, 148);
+    border: 2px solid rgb(167, 166, 166);
     border-radius: 50px;
     border-radius: 100%;
 }
 
 .films{
-    margin-left: 50px;;
+    display: flex;
+    gap: 50px;
    }
 
-.warning{
-width: 174px;
-height: 66px;
-background: rgba(255, 255, 255, 0.49);
-color: rgb(255, 255, 255);
-font-family: Inter;
-font-size: 24px;
-font-weight: 500;
-line-height: 141.52%;
-letter-spacing: 0%;
-text-align: center;
+.age{
+    border-left: 33px solid red;
+    width: 141px;
+    height: 66px;
+    background-color: rgba(255, 255, 255, 0.49);
+    color: white;
+    position: fixed;
+    bottom: 103px;
+    right: 0;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 141.52%;
+    letter-spacing: 0%;
+    text-align: center;
+    padding-top: 15px;
 }
 
-.warning-left{
-width: 33px;
-height: 66px;
-background: rgb(213, 13, 31);
-}
